--- a/index.html
+++ b/index.html
@@ -2,14 +2,73 @@
 <html>
 <head>
 	<title>Graphics Project</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<style type="text/css">
+		a {
+	    color: inherit;
+	    text-decoration: none;
+		}
+		a:hover {
+		     color: white; 
+		     text-decoration:none; 
+		     cursor:pointer;  
+		}
+	</style>
 </head>
-<body>
-	<div>
-		<img src="boat.gif">
+<body style="text-align: center">
+	<h1 style="	background:
+				radial-gradient(circle farthest-side at 0% 50%,#fb1 23.5%,rgba(240,166,17,0) 0)21px 30px,
+				radial-gradient(circle farthest-side at 0% 50%,#B71 24%,rgba(240,166,17,0) 0)19px 30px,
+				linear-gradient(#fb1 14%,rgba(240,166,17,0) 0, rgba(240,166,17,0) 85%,#fb1 0)0 0,
+				linear-gradient(150deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0) 0,rgba(240,166,17,0) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
+				linear-gradient(30deg,#fb1 24%,#B71 0,#B71 26%,rgba(240,166,17,0) 0,rgba(240,166,17,0) 74%,#B71 0,#B71 76%,#fb1 0)0 0,
+				linear-gradient(90deg,#B71 2%,#fb1 0,#fb1 98%,#B71 0%)0 0 #fb1;
+				background-size: 40px 60px;
+				padding: 5% 5%;
+				margin: 2% 25% 5% 25%;
+				font-size: 60px;">Graphics Project GROUP 10</h1>
+
+<h2 style="border-bottom: 2px solid black;border-top: 2px solid black;margin: 0px 40% 3% 40%">GROUP MEMBERS</h2>
+
+	<div style="position: relative;left: 35%;margin-bottom: 3%">
+
+		<div class="row">
+			<div class="col-lg-2" style=" text-decoration: underline;"><h4>NAME</h4></div>
+			<div class="col-lg-2" style=" text-decoration: underline;"><h4>Roll</h4></div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-2">Bablu KR. Shaw</div>
+			<div class="col-lg-2">1782008</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-2">Arindam Chakraborty</div>
+			<div class="col-lg-2">1782010</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-2">Pritam Podder</div>
+			<div class="col-lg-2">1782027</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-2">Abhishek Chakraborty</div>
+			<div class="col-lg-2">1782051</div>
+		</div>
+
 	</div>
 
-	<div>
-		<img src="circle.gif">
+	<div style="position: relative;left: 35%;margin-bottom: 3%">
+		<div class="row" style="height: 100px">
+			<div class="col-lg-2"><h2>Moving Boat</h2></div>
+			<div class="col-lg-2"><button class="btn btn-danger"><a href="boat.html">Preview</a></button></div>
+		</div>
+
+		<div class="row" style="height: 100px">
+			<div class="col-lg-2"><h2>Concentric Circle</h2></div>
+			<div class="col-lg-2"><button class="btn btn-danger"><a href="circle.html">Preview</a></button></div>
+		</div>
 	</div>
 </body>
 </html>
