--- a/boat.html
+++ b/boat.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 	<img src="boat.gif"><br>
-	<button type="button" class="btn btn-link"><a href="https://github.com/pritampodder/graphics-project/tree/master/Moving%20Boat">click here for source code</a></button>
+	<button type="button" class="btn btn-link"><a href="https://github.com/pritampodder/graphics-project/archive/master.zip">click here for source code</a></button>
 </body>
 </html>
