--- a/circle.html
+++ b/circle.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<img src="circle.gif"><br>
-	<button type="button" class="btn btn-link"><a href="https://github.com/pritampodder/graphics-project/tree/master/Concentric%20Circles">click here for source code</a></button>
+	<button type="button" class="btn btn-link"><a href="https://github.com/pritampodder/graphics-project/archive/master.zip">click here for source code</a></button>
 </body>
 </html>
