--- a/boat.html
+++ b/boat.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<img src="boat.gif"><br>
-	<button type="button" class="btn btn-link"><a href="https://github.com/pritampodder/graphics-project/archive/master.zip">click here for source code</a></button>
+	<div style="margin-top: 30px"></div>
+	<button type="button" class="btn btn-link" style="font-size: 40px"><a href="https://github.com/pritampodder/graphics-project/archive/master.zip">click here for source code</a></button>
 </body>
 </html>
